# NAI

./: Lab8.cpp  lab9poprawione.cpp  main.cpp
Lab9/: CMakeLists.txt  main.cpp
lab2/: main.cpp
lab7/: CMakeLists.txt  main.cpp
zad2/: main.cpp
